# wyoming_openai

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.localai.yml  docker-compose.yml  pyproject.toml
.agents/skills/bump-version/: SKILL.md
.agents/skills/lint/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump-version.yml  docker-image-pr.yml  docker-image.yml  draft-release.yml  lint.yml  pr-cleanup.yml  publish-to-pypi.yml  test.yml
src/wyoming_openai/: __main__.py  compatibility.py  handler.py  utilities.py
tests/: test_compatibility.py  test_handler.py  test_integration.py  test_main.py  test_utilities.py
