[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wyoming_openai"
version = "0.4.3"
description = "OpenAI-Compatible Proxy Middleware for the Wyoming Protocol"
authors = [
    { name = "Rory Eckel" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["proxy", "tts", "openai", "home-assistant", "stt", "asr", "wyoming"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai==2.30.0",
    "wyoming==1.8.0",
    "pysbd==0.3.4"
]

[project.urls]
Homepage = "https://github.com/roryeckel/wyoming_openai"
Issues = "https://github.com/roryeckel/wyoming_openai/issues"

[project.optional-dependencies]
dev = [
    "ruff==0.15.8",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "pyright==1.1.408",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wyoming_openai", "wyoming_openai.*"]

[tool.pyright]
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "dist",
    "build",
]

[tool.ruff]
# Enable Pyflakes (`F`), isort (`I`), and other recommended rules
lint.select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "T20", "RET"]
lint.ignore = []

line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".github",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "dist",
    "build",
]

[tool.ruff.lint.isort]
known-first-party = ["wyoming_openai"]
